Fixed label text color in dark mode for activity plots #203

--- a/apps/mobile/pushtracker/src/app/scss/activity-tab/_activity-tab-dark.scss
+++ b/apps/mobile/pushtracker/src/app/scss/activity-tab/_activity-tab-dark.scss
@@ -64,6 +64,10 @@
     color: $white;
   }
 
+  SegmentedBar {
+    color: $white;
+  }
+
   // label {
   //   color: $white;
   // }
